--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 org.gradle.parallel=true
 org.gradle.vfs.watch=true
 org.gradle.caching=true
+docker.builder=true
 classgraphVersion=4.8.152
 jacksonVersion=2.14.1
 jacksonDatabindVersion=2.14.1
