--- a/settings.gradle
+++ b/settings.gradle
@@ -31,3 +31,4 @@ include 'spellsource-game-benchmarks'
 include 'spellsource-server-deployment'
 include 'spellsource-private'
 include 'spellsource-web-cardeditor-support'
+include 'spellsource-art-generation'
