--- a/spellsource-web/package.json
+++ b/spellsource-web/package.json
@@ -23,6 +23,7 @@
     "@graphql-tools/stitch": "^8.7.43",
     "@react-icons/all-files": "^4.1.0",
     "@react-spring/parallax": "^9.1.2",
+    "@types/node-fetch": "^2.6.4",
     "@types/react-loadable": "^5.5.6",
     "acorn": "^8.2.4",
     "aseprite": "^0.3.0",
@@ -32,6 +33,8 @@
     "cors": "^2.8.5",
     "elasticlunr": "^0.9.5",
     "enumify": "^2.0.0",
+    "es6-promise": "^4.2.8",
+    "form-data": "^4.0.0",
     "glob-promise": "^6.0.2",
     "graphql": "15.8.0",
     "graphql-tools": "^8.3.19",
@@ -42,6 +45,7 @@
     "next": "^13.2.4",
     "next-auth": "^4.20.1",
     "nextjs-cors": "^2.1.2",
+    "node-fetch": "^3.3.2",
     "node-fs-extra": "^0.8.2",
     "pify": "^5.0.0",
     "pixelmatch": "^5.2.1",
@@ -75,6 +79,7 @@
     "sharp": "^0.32.0",
     "stream-read-all": "^3.0.1",
     "string-format": "^2.0.0",
+    "url-parse": "^1.5.10",
     "webpack": "^5.76.2",
     "yarn": "^1.22.10"
   },
@@ -95,6 +100,7 @@
     "@types/probe-image-size": "^7.2.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/url-parse": "^1.4.8",
     "flow-bin": "^0.150.1",
     "identity-obj-proxy": "^3.0.0",
     "java": "~0.13.0",
