--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "steamguardcli"]
 	path = steamguardcli
 	url = git@github.com:hiddenswitch/steamguard-cli.git
+[submodule "comfyui"]
+	path = spellsource-art-generation/comfyui
+	url = git@github.com:hiddenswitch/ComfyUI.git
