include updated openapi bindings, add cors, update master

--- a/spellsource-art-generation/build.gradle
+++ b/spellsource-art-generation/build.gradle
@@ -78,7 +78,7 @@ tasks.register('run') {
     exec {
       workingDir('workdir')
       executable = "${scriptsDir}/comfyui"
-      args "--listen"
+      args "--listen", "--enable-cors-header"
     }
   }
 }
