--- a/.gitattributes
+++ b/.gitattributes
@@ -12,3 +12,4 @@ spellsource-protos/src/csharp/HiddenSwitch/Framework/Plugins/Grpc.Core/runtimes/
 spellsource-protos/src/csharp/HiddenSwitch/Framework/Plugins/Grpc.Core/runtimes/ios/libgrpc.a filter=lfs diff=lfs merge=lfs -text
 *.exe filter=lfs diff=lfs merge=lfs -text
 *.safetensors filter=lfs diff=lfs merge=lfs -text
+*.onnx filter=lfs diff=lfs merge=lfs -text
