needs fixes for tsc / yarn

--- a/spellsource-web/build.gradle
+++ b/spellsource-web/build.gradle
@@ -55,6 +55,7 @@ tasks.register('copyComfyClient') {
       from addlInput
       into addlOutput
       include("**/*.ts")
+      exclude("index.ts")
     }
   }
 }
