--- a/spellsource-web/package.json
+++ b/spellsource-web/package.json
@@ -80,6 +80,7 @@
     "sharp": "^0.32.0",
     "stream-read-all": "^3.0.1",
     "string-format": "^2.0.0",
+    "ts-node": "^10.9.1",
     "url-parse": "^1.5.10",
     "webpack": "^5.76.2",
     "yarn": "^1.22.10"
@@ -94,7 +95,6 @@
     "@graphql-codegen/typescript-resolvers": "^3.1.1",
     "@tomysmith/deep-partial": "^1.0.1",
     "@types/elasticlunr": "^0.9.5",
-    "@types/java": "~0.9.2",
     "@types/jest": "^26.0.0",
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.15.3",
@@ -104,7 +104,6 @@
     "@types/url-parse": "^1.4.8",
     "flow-bin": "^0.150.1",
     "identity-obj-proxy": "^3.0.0",
-    "java": "~0.13.0",
     "jest": "^29.1.0",
     "jest-environment-jsdom": "^29.1.0",
     "patch-package": "^6.5.1",
@@ -116,6 +115,8 @@
     "typescript": "^4.3.2"
   },
   "resolutions": {
-    "graphql": "15.8.0"
+    "graphql": "15.8.0",
+    "wrap-ansi": "7.0.0",
+    "string-width": "4.1.0"
   }
 }
