--- a/settings.gradle
+++ b/settings.gradle
@@ -32,3 +32,4 @@ include 'spellsource-server-deployment'
 include 'spellsource-private'
 include 'spellsource-web-cardeditor-support'
 include 'spellsource-art-generation'
+include 'spellsource-keycloak'
