--- a/spellsource-web/package.json
+++ b/spellsource-web/package.json
@@ -39,6 +39,7 @@
     "graphql": "15.8.0",
     "graphql-tools": "^8.3.19",
     "gray-matter": "^4.0.3",
+    "ioredis": "^5.3.2",
     "java-bridge": "^2.4.0",
     "kaitai-struct": "^0.9.0",
     "lodash": "^4.17.15",
