--- a/spellsource-web-cardeditor-support/build.gradle
+++ b/spellsource-web-cardeditor-support/build.gradle
@@ -1,17 +1,19 @@
 plugins {
-    id 'com.github.johnrengelman.shadow' version "$shadowPluginVersion"
-    id 'java-library'
+  id 'com.github.johnrengelman.shadow' version "$shadowPluginVersion"
+  id 'java-library'
 }
 
 apply from: '../gradle/instrument.gradle'
 
 dependencies {
-    api project(':spellsource-common')
-    api project(':spellsource-game')
-    api project(':spellsource-cards-git')
-    api project(':spellsource-testutils')
+  api project(':spellsource-common')
+  api project(':spellsource-game')
+  api project(':spellsource-cards-git')
+  api project(':spellsource-testutils')
+  testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
+  testCompileOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
 }
 
 shadowJar {
-    archiveVersion.set("")
+  archiveVersion.set("")
 }
