--- a/spellsource-web/package.json
+++ b/spellsource-web/package.json
@@ -94,6 +94,7 @@
     "@graphql-codegen/typescript-operations": "^3.0.2",
     "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@graphql-codegen/typescript-resolvers": "^3.1.1",
+    "@playwright/test": "^1.38.1",
     "@tomysmith/deep-partial": "^1.0.1",
     "@types/elasticlunr": "^0.9.5",
     "@types/jest": "^26.0.0",
