--- a/spellsource-web/package.json
+++ b/spellsource-web/package.json
@@ -96,6 +96,7 @@
     "@graphql-codegen/typescript-resolvers": "^3.1.1",
     "@playwright/test": "^1.38.1",
     "@tomysmith/deep-partial": "^1.0.1",
+    "@types/cors": "^2.8.14",
     "@types/elasticlunr": "^0.9.5",
     "@types/jest": "^26.0.0",
     "@types/lodash": "^4.14.191",
@@ -103,7 +104,9 @@
     "@types/probe-image-size": "^7.2.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/string-format": "^2.0.1",
     "@types/url-parse": "^1.4.8",
+    "@types/uuid": "^9.0.4",
     "flow-bin": "^0.150.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.1.0",
