Saving art to s3 first pass

--- a/spellsource-web/package.json
+++ b/spellsource-web/package.json
@@ -19,6 +19,7 @@
     "@apollo/client": "^3.7.10",
     "@apollo/server": "^4.5.0",
     "@as-integrations/next": "^1.2.0",
+    "@aws-sdk/client-s3": "^3.423.0",
     "@graphile-contrib/pg-omit-archived": "^3.2.1",
     "@graphql-tools/stitch": "^8.7.43",
     "@react-icons/all-files": "^4.1.0",
