--- a/spellsource-web/package.json
+++ b/spellsource-web/package.json
@@ -57,6 +57,7 @@
     "postgraphile-upsert-plugin": "^3.2.2",
     "probe-image-size": "^7.2.3",
     "psd.js": "^3.3.15",
+    "raw-body": "^2.5.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-div-100vh": "^0.7.0",
