--- a/spellsource-web/tsconfig.json
+++ b/spellsource-web/tsconfig.json
@@ -106,7 +106,7 @@
     "allowJs": true,
     "noEmit": true,
     "incremental": true,
-    "moduleResolution": "node",
+    "moduleResolution": "nodenext",
     "resolveJsonModule": true,
     "isolatedModules": true
   },
