--- a/spellsource-web/package.json
+++ b/spellsource-web/package.json
@@ -4,7 +4,8 @@
   "description": "Spellsource Internet presence, including documentation, wiki and editor",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "yarn playwright test",
+    "playwrightInstall": "yarn playwright install",
     "postinstall": "yarn run patch-package",
     "develop": "next dev",
     "dev": "next dev",
@@ -124,5 +125,6 @@
     "wrap-ansi": "7.0.0",
     "string-width": "4.1.0"
   },
-  "packageManager": "yarn@3.6.4"
+  "packageManager": "yarn@4.0.2",
+  "keywords": []
 }
