--- a/.github/workflows/gradle-test.yml
+++ b/.github/workflows/gradle-test.yml
@@ -6,18 +6,21 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           lfs: true
       - run: git lfs checkout
-      - uses: actions/setup-java@v3
+      - uses: actions/setup-java@v4
         with:
-          java-version: '20'
+          java-version: '21'
           distribution: temurin
-      - uses: actions/setup-java@v3
+      - uses: actions/setup-node@v4
         with:
-          java-version: '19'
-          distribution: temurin
+          node-version: 18
+      - uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: |
+            6.x.x
       - uses: gradle/wrapper-validation-action@v1
       - name: Test with Gradle
         run: ./gradlew --no-parallel test
