--- a/spellsource-web/.gitignore
+++ b/spellsource-web/.gitignore
@@ -66,8 +66,13 @@ yarn-error.log
 .yarn-integrity
 _site
 .sass-cache/
-.yarn
-
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 build/
 
 .next
