--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -2,8 +2,13 @@ name: Build Image
 on:
   push:
     branches: ['master']
+    tags: ['*']
+
+env: 
+  ALWAYS_PUSH: "true" # TODO make this false and only push when new tags are pushed?
+  
 jobs:
-  build-and-deploy:
+  build-and-deploy-server:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -25,10 +30,38 @@ jobs:
       - name: Test with Gradle
         run: ./gradlew --no-parallel test
       - name: Log in to the Container registry
+        if: ${{ startsWith(github.ref, 'refs/tags/') || env.ALWAYS_PUSH == 'true' }}
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build Server Image
+        if: ${{ startsWith(github.ref, 'refs/tags/') || env.ALWAYS_PUSH == 'true' }}
         run: ./gradlew spellsource-server:githubDockerPush
+        
+  build-and-deploy-website:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          lfs: true # TODO still needed just for website?
+      - run: git lfs checkout 
+      - uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: temurin
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 18
+      - uses: gradle/wrapper-validation-action@v1
+      - name: Log in to the Container registry
+        if: ${{ startsWith(github.ref, 'refs/tags/') || env.ALWAYS_PUSH == 'true' }}
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build Website Image
+        if: ${{ startsWith(github.ref, 'refs/tags/') || env.ALWAYS_PUSH == 'true' }}
+        run: ./gradlew spellsource-web:githubDockerPush
