--- a/.gitattributes
+++ b/.gitattributes
@@ -13,3 +13,5 @@ spellsource-protos/src/csharp/HiddenSwitch/Framework/Plugins/Grpc.Core/runtimes/
 *.exe filter=lfs diff=lfs merge=lfs -text
 *.safetensors filter=lfs diff=lfs merge=lfs -text
 *.onnx filter=lfs diff=lfs merge=lfs -text
+# Include the JAR files this way
+spellsource-python/src/spellsource/spellsource-server-*.jar filter=lfs diff=lfs merge=lfs -text
