--- a/spellsource-web/package.json
+++ b/spellsource-web/package.json
@@ -17,7 +17,8 @@
     "build": "next build",
     "start": "next start -H 0.0.0.0",
     "codegen": "graphql-codegen",
-    "scss": "typed-scss-modules src"
+    "scss": "typed-scss-modules src",
+    "openapi-ts": "openapi-ts"
   },
   "author": "Benjamin Berman",
   "license": "AGPL-3.0-or-later",
@@ -28,6 +29,7 @@
     "@aws-sdk/client-s3": "^3.423.0",
     "@graphile-contrib/pg-omit-archived": "^4.0.0-beta.2",
     "@graphql-tools/stitch": "^8.7.43",
+    "@hey-api/client-fetch": "^0.5.1",
     "@react-icons/all-files": "^4.1.0",
     "@react-spring/parallax": "^9.1.2",
     "@types/node-fetch": "^2.6.4",
@@ -100,6 +102,7 @@
     "@graphql-codegen/typescript-operations": "^3.0.2",
     "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@graphql-codegen/typescript-resolvers": "^3.1.1",
+    "@hey-api/openapi-ts": "^0.59.0",
     "@playwright/test": "^1.38.1",
     "@tomysmith/deep-partial": "^1.0.1",
     "@types/cors": "^2.8.14",
