--- a/.github/workflows/cd-develop.yaml
+++ b/.github/workflows/cd-develop.yaml
@@ -4,13 +4,45 @@ on:
     branches: ['develop']
   
 jobs:
+  build-and-deploy-server:
+    # if: startsWith(github.ref, 'refs/tags/') # Deploy a new server version when a new tag is pushed
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          lfs: true
+      - run: git lfs checkout
+      - uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: temurin
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 18
+      - uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: |
+            6.x.x
+      - uses: gradle/wrapper-validation-action@v1
+      - name: Test with Gradle
+        run: ./gradlew --no-parallel test
+      - name: Log in to the Container registry
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build Server Image
+        run: ./gradlew spellsource-server:githubDockerPush
+  
   build-and-deploy-website:
+    if: !startsWith(github.ref, 'refs/tags/') # Deploy a new website version for each push to master
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
           lfs: true # TODO still needed just for website?
-      - run: git lfs checkout 
+      - run: git lfs checkout
       - uses: actions/setup-java@v4
         with:
           java-version: '21'
@@ -19,7 +51,8 @@ jobs:
         with:
           node-version: 18
       - uses: gradle/wrapper-validation-action@v1
-        # TODO run website tests
+      - name: Test with Gradle
+        run: ./gradlew --no-parallel :spellsource-web:yarnRunTest
       - name: Log in to the Container registry
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
